[project]
name = "email-env"
version = "0.1.0"
description = "Email classification OpenEnv environment"
authors = [{name = "Swarali"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[tool.openenv]
entrypoint = "my_env:EmailEnv"
tasks = ["easy", "medium", "hard"]
